--- a/prova del gioco paiola.html
+++ b/prova del gioco paiola.html
@@ -34,12 +34,16 @@
         let computerY = (canvas.height - paddleHeight) / 2;
         let ballX = canvas.width / 2;
         let ballY = canvas.height / 2;
-        let ballSpeedX = 6; // Aumentato per velocizzare la pallina
-        let ballSpeedY = 6; // Aumentato per velocizzare la pallina
+        let ballSpeedX = 6;
+        let ballSpeedY = 6;
         let playerSpeed = 0;
-        let computerSpeed = 6; // Aumentato per far muovere più velocemente il paddle del computer
+        let computerSpeed = 6;
         let playerScore = 0;
         let computerScore = 0;
+
+        // Carica l'immagine di sfondo
+        const backgroundImage = new Image();
+        backgroundImage.src = 'https://example.com/path/to/your/image.jpg'; // Sostituisci con l'URL del tuo sfondo
 
         // Disegna il paddle
         function drawPaddle(x, y) {
@@ -66,9 +70,9 @@
         // Gestisci il movimento del paddle del giocatore
         document.addEventListener('keydown', function (e) {
             if (e.key === 'ArrowUp') {
-                playerSpeed = -8; // Aumentato per far muovere più velocemente il paddle del giocatore
+                playerSpeed = -8;
             } else if (e.key === 'ArrowDown') {
-                playerSpeed = 8; // Aumentato per far muovere più velocemente il paddle del giocatore
+                playerSpeed = 8;
             }
         });
         document.addEventListener('keyup', function () {
@@ -119,23 +123,26 @@
         function resetBall() {
             ballX = canvas.width / 2;
             ballY = canvas.height / 2;
-            ballSpeedX = 6; // Ripristina la velocità iniziale della pallina
-            ballSpeedY = 6; // Ripristina la velocità iniziale della pallina
+            ballSpeedX = 6;
+            ballSpeedY = 6;
 
-            // Aumenta la velocità della pallina a ogni punto fatto
-            if (playerScore % 5 === 0 || computerScore % 5 === 0) {
+            // Aumenta la velocità della pallina ogni 3 punti fatti
+            if (playerScore % 3 === 0 || computerScore % 3 === 0) {
                 ballSpeedX *= 1.1;
                 ballSpeedY *= 1.1;
             }
         }
 
-        // Disegna tutto
+        // Disegna tutto, inclusa l'immagine di sfondo
         function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawPaddle(0, playerY); // Paddle giocatore
-            drawPaddle(canvas.width - paddleWidth, computerY); // Paddle computer
-            drawBall(ballX, ballY); // Pallina
-            drawScore(); // Punteggio
+            // Disegna l'immagine di sfondo
+            ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+
+            // Disegna i paddles, la pallina e il punteggio
+            drawPaddle(0, playerY);
+            drawPaddle(canvas.width - paddleWidth, computerY);
+            drawBall(ballX, ballY);
+            drawScore();
         }
 
         // Aggiorna il gioco
@@ -145,8 +152,10 @@
             requestAnimationFrame(update);
         }
 
-        // Inizia il gioco
-        update();
+        // Inizia il gioco una volta che l'immagine di sfondo è caricata
+        backgroundImage.onload = function() {
+            update();
+        };
     </script>
 </body>
 </html>
