--- a/prova del gioco paiola.html
+++ b/prova del gioco paiola.html
@@ -1,152 +1,97 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong</title>
-    <style>
-        body {
-            background-color: black;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-        canvas {
-            border: 2px solid white;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Gioco con Pallina</title>
+  <style>
+    canvas {
+      background: #000;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
-    <canvas id="pongCanvas" width="800" height="400"></canvas>
+  <canvas id="gameCanvas" width="400" height="600"></canvas>
 
-    <script>
-        const canvas = document.getElementById('pongCanvas');
-        const ctx = canvas.getContext('2d');
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
 
-        // Impostazioni del gioco
-        const paddleWidth = 10, paddleHeight = 80;
-        const ballSize = 10;
-        let playerY = (canvas.height - paddleHeight) / 2;
-        let computerY = (canvas.height - paddleHeight) / 2;
-        let ballX = canvas.width / 2;
-        let ballY = canvas.height / 2;
-        let ballSpeedX = 6; // Aumentato per velocizzare la pallina
-        let ballSpeedY = 6; // Aumentato per velocizzare la pallina
-        let playerSpeed = 0;
-        let computerSpeed = 6; // Aumentato per far muovere più velocemente il paddle del computer
-        let playerScore = 0;
-        let computerScore = 0;
+    // Pallina
+    let ballX = canvas.width / 2;
+    let ballY = canvas.height - 30;
+    let ballRadius = 10;
+    let dx = 2;
+    let dy = -3;
 
-        // Disegna il paddle
-        function drawPaddle(x, y) {
-            ctx.fillStyle = 'white';
-            ctx.fillRect(x, y, paddleWidth, paddleHeight);
+    // Piattaforma
+    const paddleHeight = 10;
+    const paddleWidth = 75;
+    let paddleX = (canvas.width - paddleWidth) / 2;
+
+    // Controlli
+    let rightPressed = false;
+    let leftPressed = false;
+
+    document.addEventListener("keydown", keyDownHandler);
+    document.addEventListener("keyup", keyUpHandler);
+
+    function keyDownHandler(e) {
+      if (e.key === "Right" || e.key === "ArrowRight") rightPressed = true;
+      else if (e.key === "Left" || e.key === "ArrowLeft") leftPressed = true;
+    }
+
+    function keyUpHandler(e) {
+      if (e.key === "Right" || e.key === "ArrowRight") rightPressed = false;
+      else if (e.key === "Left" || e.key === "ArrowLeft") leftPressed = false;
+    }
+
+    function drawBall() {
+      ctx.beginPath();
+      ctx.arc(ballX, ballY, ballRadius, 0, Math.PI * 2);
+      ctx.fillStyle = "#fff";
+      ctx.fill();
+      ctx.closePath();
+    }
+
+    function drawPaddle() {
+      ctx.beginPath();
+      ctx.rect(paddleX, canvas.height - paddleHeight - 10, paddleWidth, paddleHeight);
+      ctx.fillStyle = "#fff";
+      ctx.fill();
+      ctx.closePath();
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawBall();
+      drawPaddle();
+
+      // Movimento pallina
+      ballX += dx;
+      ballY += dy;
+
+      // Collisioni con i muri
+      if (ballX + dx > canvas.width - ballRadius || ballX + dx < ballRadius) dx = -dx;
+      if (ballY + dy < ballRadius) dy = -dy;
+      else if (ballY + dy > canvas.height - ballRadius - 10) {
+        if (ballX > paddleX && ballX < paddleX + paddleWidth) {
+          dy = -dy;
+        } else {
+          alert("Game Over");
+          document.location.reload();
         }
+      }
 
-        // Disegna la pallina
-        function drawBall(x, y) {
-            ctx.fillStyle = 'white';
-            ctx.beginPath();
-            ctx.arc(x, y, ballSize, 0, Math.PI * 2);
-            ctx.fill();
-        }
+      // Movimento piattaforma
+      if (rightPressed && paddleX < canvas.width - paddleWidth) paddleX += 7;
+      else if (leftPressed && paddleX > 0) paddleX -= 7;
 
-        // Disegna il punteggio
-        function drawScore() {
-            ctx.fillStyle = 'white';
-            ctx.font = '30px Arial';
-            ctx.fillText(playerScore, canvas.width / 4, 30);
-            ctx.fillText(computerScore, 3 * canvas.width / 4, 30);
-        }
+      requestAnimationFrame(draw);
+    }
 
-        // Gestisci il movimento del paddle del giocatore
-        document.addEventListener('keydown', function (e) {
-            if (e.key === 'ArrowUp') {
-                playerSpeed = -8; // Aumentato per far muovere più velocemente il paddle del giocatore
-            } else if (e.key === 'ArrowDown') {
-                playerSpeed = 8; // Aumentato per far muovere più velocemente il paddle del giocatore
-            }
-        });
-        document.addEventListener('keyup', function () {
-            playerSpeed = 0;
-        });
-
-        // Movimento del gioco
-        function move() {
-            // Muovi la pallina
-            ballX += ballSpeedX;
-            ballY += ballSpeedY;
-
-            // Muovi il paddle del giocatore
-            playerY += playerSpeed;
-
-            // Muovi il paddle del computer
-            if (computerY + paddleHeight / 2 < ballY) {
-                computerY += computerSpeed;
-            } else {
-                computerY -= computerSpeed;
-            }
-
-            // Gestisci il rimbalzo della pallina sulle pareti
-            if (ballY + ballSize > canvas.height || ballY - ballSize < 0) {
-                ballSpeedY = -ballSpeedY;
-            }
-
-            // Rimbalzo della pallina sui paddles
-            if (ballX - ballSize < paddleWidth && ballY > playerY && ballY < playerY + paddleHeight) {
-                ballSpeedX = -ballSpeedX;
-            }
-            if (ballX + ballSize > canvas.width - paddleWidth && ballY > computerY && ballY < computerY + paddleHeight) {
-                ballSpeedX = -ballSpeedX;
-            }
-
-            // Controllo del punteggio
-            if (ballX - ballSize < 0) {
-                computerScore++;
-                resetBall();
-            }
-            if (ballX + ballSize > canvas.width) {
-                playerScore++;
-                resetBall();
-            }
-        }
-
-        // Reset della pallina al centro
-        function resetBall() {
-            ballX = canvas.width / 2;
-            ballY = canvas.height / 2;
-            ballSpeedX = 6; // Ripristina la velocità iniziale della pallina
-            ballSpeedY = 6; // Ripristina la velocità iniziale della pallina
-
-            // Aumenta la velocità della pallina a ogni punto fatto
-            if (playerScore % 5 === 0 || computerScore % 5 === 0) {
-                ballSpeedX *= 1.1;
-                ballSpeedY *= 1.1;
-            }
-        }
-
-        // Disegna tutto
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawPaddle(0, playerY); // Paddle giocatore
-            drawPaddle(canvas.width - paddleWidth, computerY); // Paddle computer
-            drawBall(ballX, ballY); // Pallina
-            drawScore(); // Punteggio
-        }
-
-        // Aggiorna il gioco
-        function update() {
-            move();
-            draw();
-            requestAnimationFrame(update);
-        }
-
-        // Inizia il gioco
-        update();
-    </script>
+    draw();
+  </script>
 </body>
 </html>
