--- a/prova del gioco paiola.html
+++ b/prova del gioco paiola.html
@@ -17,34 +17,63 @@
       font-family: Arial, sans-serif;
       margin-top: 10px;
     }
+
+    #gameOverScreen {
+      display: none;
+      text-align: center;
+      color: white;
+      font-family: Arial, sans-serif;
+      margin-top: 20px;
+    }
+
+    #restartBtn {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas" width="400" height="600"></canvas>
   <div id="score">Punteggio: 0</div>
+  <div id="gameOverScreen">
+    <h2>Game Over!</h2>
+    <p id="finalScore"></p>
+    <button id="restartBtn">Ricomincia</button>
+  </div>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
 
-    let ballX = canvas.width / 2;
-    let ballY = canvas.height - 30;
-    let ballRadius = 10;
-    let dx = 2;
-    let dy = -3;
+    const scoreDisplay = document.getElementById("score");
+    const gameOverScreen = document.getElementById("gameOverScreen");
+    const finalScore = document.getElementById("finalScore");
+    const restartBtn = document.getElementById("restartBtn");
 
+    let ballX, ballY, dx, dy, paddleX, rightPressed, leftPressed, score;
+    const ballRadius = 10;
     const paddleHeight = 10;
     const paddleWidth = 75;
-    let paddleX = (canvas.width - paddleWidth) / 2;
 
-    let rightPressed = false;
-    let leftPressed = false;
-
-    let score = 0;
-    const scoreDisplay = document.getElementById("score");
+    function initGame() {
+      ballX = canvas.width / 2;
+      ballY = canvas.height - 30;
+      dx = 2;
+      dy = -3;
+      paddleX = (canvas.width - paddleWidth) / 2;
+      rightPressed = false;
+      leftPressed = false;
+      score = 0;
+      scoreDisplay.textContent = "Punteggio: 0";
+      gameOverScreen.style.display = "none";
+      draw();
+    }
 
     document.addEventListener("keydown", keyDownHandler);
     document.addEventListener("keyup", keyUpHandler);
+    restartBtn.addEventListener("click", initGame);
 
     function keyDownHandler(e) {
       if (e.key === "Right" || e.key === "ArrowRight") rightPressed = true;
@@ -65,9 +94,24 @@
     }
 
     function drawPaddle() {
+      const paddleY = canvas.height - paddleHeight - 10;
+      const radius = 5;
+
+      const gradient = ctx.createLinearGradient(paddleX, paddleY, paddleX + paddleWidth, paddleY);
+      gradient.addColorStop(0, "#00f");
+      gradient.addColorStop(1, "#0ff");
+
       ctx.beginPath();
-      ctx.rect(paddleX, canvas.height - paddleHeight - 10, paddleWidth, paddleHeight);
-      ctx.fillStyle = "#fff";
+      ctx.moveTo(paddleX + radius, paddleY);
+      ctx.lineTo(paddleX + paddleWidth - radius, paddleY);
+      ctx.quadraticCurveTo(paddleX + paddleWidth, paddleY, paddleX + paddleWidth, paddleY + radius);
+      ctx.lineTo(paddleX + paddleWidth, paddleY + paddleHeight - radius);
+      ctx.quadraticCurveTo(paddleX + paddleWidth, paddleY + paddleHeight, paddleX + paddleWidth - radius, paddleY + paddleHeight);
+      ctx.lineTo(paddleX + radius, paddleY + paddleHeight);
+      ctx.quadraticCurveTo(paddleX, paddleY + paddleHeight, paddleX, paddleY + paddleHeight - radius);
+      ctx.lineTo(paddleX, paddleY + radius);
+      ctx.quadraticCurveTo(paddleX, paddleY, paddleX + radius, paddleY);
+      ctx.fillStyle = gradient;
       ctx.fill();
       ctx.closePath();
     }
@@ -80,6 +124,7 @@
       ballX += dx;
       ballY += dy;
 
+      // Collisioni con muri
       if (ballX + dx > canvas.width - ballRadius || ballX + dx < ballRadius) {
         dx = -dx;
       }
@@ -88,21 +133,22 @@
         dy = -dy;
       } else if (ballY + dy > canvas.height - ballRadius - 10) {
         if (ballX > paddleX && ballX < paddleX + paddleWidth) {
+          // Rimbalzo angolato
+          dx += (ballX - (paddleX + paddleWidth / 2)) * 0.05;
           dy = -dy;
 
-          // Aumenta la velocità
           dx *= 1.05;
           dy *= 1.05;
 
-          // Aumenta il punteggio
           score++;
           scoreDisplay.textContent = "Punteggio: " + score;
         } else {
-          alert("Game Over! Punteggio: " + score);
-          document.location.reload();
+          showGameOver();
+          return;
         }
       }
 
+      // Movimento piattaforma
       if (rightPressed && paddleX < canvas.width - paddleWidth) {
         paddleX += 7;
       } else if (leftPressed && paddleX > 0) {
@@ -112,7 +158,12 @@
       requestAnimationFrame(draw);
     }
 
-    draw();
+    function showGameOver() {
+      finalScore.textContent = "Il tuo punteggio: " + score;
+      gameOverScreen.style.display = "block";
+    }
+
+    initGame();
   </script>
 </body>
 </html>
