--- a/prova del gioco paiola.html
+++ b/prova del gioco paiola.html
@@ -42,16 +42,21 @@
       if (gameOver) {
         ctx.font = "32px Arial";
         ctx.fillStyle = "red";
+        ctx.textAlign = "center";
         ctx.fillText("GAME OVER!!", canvas.width / 2, canvas.height / 2);
         return;
       }
 
       ballX += dx; ballY += dy;
       if (ballX + dx > canvas.width - ballRadius || ballX + dx < ballRadius) dx = -dx;
-      if (ballY + dy < ballRadius) { dy = -dy; score++; }
+      if (ballY + dy < ballRadius) { dy = -dy; }
       else if (ballY + dy > canvas.height - ballRadius - 10) {
-        if (ballX > paddleX && ballX < paddleX + paddleWidth) { dy = -dy; score++; }
-        else { gameOver = true; }
+        if (ballX > paddleX && ballX < paddleX + paddleWidth) { 
+          dy = -dy; 
+          score++;  // Incrementa il punteggio solo quando la pallina colpisce la piattaforma
+        } else { 
+          gameOver = true; 
+        }
       }
 
       if (rightPressed && paddleX < canvas.width - paddleWidth) paddleX += 7;
