--- a/prova del gioco paiola.html
+++ b/prova del gioco paiola.html
@@ -54,6 +54,8 @@
         if (ballX > paddleX && ballX < paddleX + paddleWidth) { 
           dy = -dy; 
           score++;  // Incrementa il punteggio solo quando la pallina colpisce la piattaforma
+          dx *= 1.05; // Incrementa la velocità orizzontale
+          dy *= 1.05; // Incrementa la velocità verticale
         } else { 
           gameOver = true; 
         }
