--- a/esercio lezione 4 vue.html
+++ b/esercio lezione 4 vue.html
@@ -61,9 +61,9 @@ createApp({
 
       
       carrello: [
-        { nome: 'Maglietta', prezzo: 19.99 },
-        { nome: 'Jeans', prezzo: 49.90 },
-        { nome: 'Scarpe', prezzo: 89.50 },
+        { nome: 'Air jordan 4 retro', prezzo: 149.99 },
+        { nome: 'Maglia Nike ', prezzo: 20.00 },
+        { nome: 'Cappello NY', prezzo: 15.00 },
       ],
 
      
