--- a/esercizi lezione 5 vue.html
+++ b/esercizi lezione 5 vue.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Esercizio HTML - Stato Messaggio, Avatar, Saluto e Card</title>
+  <title>ESERCIZIO LEZIONE 5</title>
   <style>
     /* --- Stili generali --- */
     body {
@@ -16,9 +16,9 @@
 
     /* --- Stato del Messaggio --- */
     #message-box {
-      padding: 15px;
-      margin-bottom: 10px;
-      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 15px;
+      border-radius: 7px;
       color: white;
       font-weight: bold;
       text-align: center;
