Update product list in Esercizi lezione 6 vue.html

--- a/Esercizi lezione 6 vue.html
+++ b/Esercizi lezione 6 vue.html
@@ -172,9 +172,9 @@
       data() {
         return {
           prodotti: [
-            { nome: 'Laptop', prezzo: 899.99 },
-            { nome: 'Smartphone', prezzo: 499.99 },
-            { nome: 'Cuffie', prezzo: 59.99 }
+            { nome:  "Nba 2k26 ps5", prezzo: 60.00 },
+            { nome: "computer portatile HP", prezzo: 230.00 },
+            { nome: "Auricolari", prezzo: 59.99 }
           ],
           modaleAperta: false,
           valutazione: 0
